--- a/camera angles.tex
+++ b/camera angles.tex
@@ -31,7 +31,7 @@ Ritsumeikan Univ., Kyoto, Japan.
 
 \section{Objectivity}\todo{write this}
 
-\red
+\blue
 REFER TO Aker and Jenni Maenpaa - mentions relationship of photography produced image and that at which the camera was aimed - this may be relevant to the photojournalist but of viewers - they have no other reference to the event/situation portrayed (except in the relatively unusual case where a viewer was also a participant) - except for THIS IS IMPORTANT - the news script. 'Write to picture' journos learn. Pictures and words have to match to some degree. So the primary and initial comparison viewers make - when judging the credibility of a news image surely is whether it matches the descriptions and facts referred to in the script. Surely. 
 
 So for the producers this match is a basic given - built into training practises, the fundamental and lowest possible necessity for either the acceptability of a script (it can be illustrated with the available images) and the images (they illustrate or back up the facts as portrayed in the story). Whether the story is subject to bias or any of those other criticism is effectively irrelevant here. 
